--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -4,9 +4,18 @@
   align-items: center;
 }
 
-@media(max-width:992px){
+.icon{
+  font-size: 20px;
+}
+
+.category_caption{
+  font-size: 14px;
+  line-height: 20px;
+}
+
+@media(max-width:767px){
   .category{
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
