--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,8 +7,9 @@
 
 
 @media(max-width:1400px){
-  .abc{
+  .navigationbar{
     background: #f8f9fa;
+    margin-bottom: 10px;
 
     .category_list{
       background:none;
