--- a/src/components/maincontent/maincontent.scss
+++ b/src/components/maincontent/maincontent.scss
@@ -1,6 +1,14 @@
 .main_content{
   border: 2px solid black;
+  padding-top: 40px;
   width: 100%;
+
+  .open{
+    margin-left: 10px;
+    height: 40px;
+    background: none;
+    border-radius: 5px;
+  }
   p{
     background-color: yellow;
   }
