--- a/src/components/maincontent/maincontent.scss
+++ b/src/components/maincontent/maincontent.scss
@@ -1,15 +1,73 @@
-.main_content{
-  border: 2px solid black;
-  padding-top: 40px;
+.main_content {
   width: 100%;
-
-  .open{
-    margin-left: 10px;
-    height: 40px;
-    background: none;
-    border-radius: 5px;
+  .bg_container {
+    margin-top: 24px;
+    border-radius: 8px;
+    box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24),
+      0px 2px 4px rgba(90, 91, 106, 0.24);
+    .dropdowns {
+      margin-bottom: 40px;
+    }
+    .cards_container {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      row-gap: 20px;
+      .card {
+        align-self: center;
+        justify-self: center;
+      }
+    }
   }
-  p{
-    background-color: yellow;
+}
+
+@media (max-width: 1600px) {
+  .main_content {
+    .bg_container {
+      .cards_container {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .main_content {
+    .bg_container {
+      .cards_container {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .main_content {
+    margin-top: 45px;
+    .bg_container {
+      margin-top: 0px;
+      .cards_container {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .main_content {
+    .bg_container {
+      .cards_container {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .main_content {
+    .bg_container {
+      .cards_container {
+        grid-template-columns: 1fr;
+      }
+    }
   }
 }
