Add : Categorywise search and filters.

--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -6,9 +6,11 @@
 
 .icon{
   font-size: 20px;
+  color: #9696A0;
 }
 
 .category_caption{
+  color: #787885;
   font-size: 14px;
   line-height: 20px;
 }
