--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -64,7 +64,8 @@
     margin-right: 0px;
     padding: 10px 10px;
     position: absolute;
-    background-color: rgba(211, 211, 211, 0.404);
+    // background-color: rgba(211, 211, 211, 0.404);
+    background-color: white;
     transform: translateX(-220px);
     transition: all 500ms ease;
 
