Completed Ecommerce application.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,3 @@
-.App{
-  .grid_container{
-    display: grid;
-    width: 100%;
-    grid-template-columns: 100%;
-  }
-}
-
-@media(min-width:1051px){
-  .App{
-    .grid_container{
-      width: 992px;
-      grid-template-columns: 25.38% 74.61%;
-    }
-  }
-}
-
-@media(min-width:1200px){
-  .App{
-    .grid_container{
-      width: 1140px;
-    }
-  }
-}
-
-@media(min-width:1400px){
-  .App{
-    .grid_container{
-      width: 1320px;
-    }
-  }
-}
-
-@media(min-width:1600px){
-  .App{
-    .grid_container{
-      width: 1493px;
-    }
-  }
+* {
+  box-sizing: border-box;
 }
