--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -1,22 +1,22 @@
-.category{
+.category {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.icon{
+.category__icon {
   font-size: 20px;
-  color: #9696A0;
+  color: #9696a0;
 }
 
-.category_caption{
+.category__caption {
   color: #787885;
   font-size: 14px;
   line-height: 20px;
 }
 
-@media(max-width:767px){
-  .category{
+@media (max-width: 767px) {
+  .category {
     flex-direction: row;
     justify-content: flex-start;
   }
