--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,14 +1,11 @@
-.dropdown_container{
+.dropdown-container{
   display: inline-block;
   outline: 1px solid #5A5B6A;
   outline-offset: -1px;
   border-radius: 4px;
 
-  #first{
-    color: black;
-  }
   .btn{
-    color: #787885;
+    color: black;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
