--- a/src/components/maincontent/maincontent.scss
+++ b/src/components/maincontent/maincontent.scss
@@ -1,15 +1,21 @@
-.main_content {
+.main-content {
   width: 100%;
-  // background-color: black;
-  .bg_container {
+  overflow: hidden;
+  .main-content__content-container {
+    min-height: 1200px;
     margin-top: 24px;
+    border: 0.5px solid lightgray;
     border-radius: 8px;
     box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24),
       0px 2px 4px rgba(90, 91, 106, 0.24);
-    .dropdowns {
+    .main-content__dropdowns {
       margin-bottom: 40px;
     }
-    .cards_container {
+    .main-content__spinner {
+      display: flex;
+      justify-content: center;
+    }
+    .main-content__cards-container {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       row-gap: 20px;
@@ -17,14 +23,37 @@
         align-self: center;
         justify-self: center;
       }
+      .main-content__error-msg {
+        grid-column: 1/5;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 25px;
+        font-weight: 700;
+        align-self: center;
+        justify-self: center;
+        .main-content__error-msg-btn {
+          margin-top: 20px;
+          width: 200px;
+          height: 40px;
+          line-height: 30px;
+          font-size: 20px;
+          font-weight: 700;
+          color: white;
+          background-color: #842029;
+          border: none;
+          border-radius: 10px;
+        }
+      }
     }
   }
 }
 
 @media (max-width: 1600px) {
-  .main_content {
-    .bg_container {
-      .cards_container {
+  .main-content {
+    .main-content__content-container {
+      .main-content__cards-container {
         grid-template-columns: 1fr 1fr 1fr;
       }
     }
@@ -32,9 +61,9 @@
 }
 
 @media (max-width: 1200px) {
-  .main_content {
-    .bg_container {
-      .cards_container {
+  .main-content {
+    .main-content__content-container {
+      .main-content__cards-container {
         grid-template-columns: 1fr 1fr;
       }
     }
@@ -42,11 +71,11 @@
 }
 
 @media (max-width: 1050px) {
-  .main_content {
+  .main-content {
     margin-top: 45px;
-    .bg_container {
+    .main-content__content-container {
       margin-top: 0px;
-      .cards_container {
+      .main-content__cards-container {
         grid-template-columns: 1fr 1fr 1fr;
       }
     }
@@ -54,9 +83,9 @@
 }
 
 @media (max-width: 800px) {
-  .main_content {
-    .bg_container {
-      .cards_container {
+  .main-content {
+    .main-content__content-container {
+      .main-content__cards-container {
         grid-template-columns: 1fr 1fr;
       }
     }
@@ -64,10 +93,22 @@
 }
 
 @media (max-width: 576px) {
-  .main_content {
-    .bg_container {
-      .cards_container {
+  .main-content {
+    .main-content__content-container {
+      .main-content__cards-container {
         grid-template-columns: 1fr;
+      }
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  .main-content {
+    .main-content__content-container {
+      .main-content__cards-container {
+        .main-content__error-msg {
+          font-size: 20px;
+        }
       }
     }
   }
